--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Esbelto",
-	"version": "0.0.6",
+	"name": "esbelto",
+	"version": "0.0.7",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
