--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-	"name": "esbelto",
-	"version": "0.1.11",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview"
-	},
-	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.183",
-		"mdsvex": "^0.9.7",
-		"svelte": "^3.43.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"lit-element": "^3.0.1"
-	}
+  "name": "esbelto",
+  "version": "0.2.12",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
+  },
+  "devDependencies": {
+    "@sveltejs/kit": "^1.0.0-next.183",
+    "autoprefixer": "^10.3.7",
+    "cssnano": "^5.0.8",
+    "mdsvex": "^0.9.7",
+    "postcss": "^8.3.9",
+    "postcss-load-config": "^3.1.0",
+    "postcss-nested": "^5.0.6",
+    "svelte": "^3.43.2",
+    "svelte-preprocess": "^4.9.8"
+  },
+  "type": "module",
+  "dependencies": {
+    "lit-element": "^3.0.1"
+  }
 }
